src/test/ui/resolve/issue-6702.stderr
error[E0423]: expected function, tuple struct or tuple variant, found struct `Monster`
  --> $DIR/issue-6702.rs:7:14
   |
LL |     let _m = Monster();
   |              ^^^^^^^ not a function, tuple struct or tuple variant

error: aborting due to previous error

For more information about this error, try `rustc --explain E0423`.
